--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,6 +2,8 @@ app:
     resource: '@AppBundle/Controller/'
     type: annotation
 
-
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+
+fos_js_routing:
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
