--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "bootstrap": "3",
-    "jquery": "^3.2.1"
+    "del": "^3.0.0",
+    "font-awesome": "^4.7.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-minify": "^2.1.0",
+    "jquery": "^3.2.1",
+    "merge-stream": "^1.0.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0"
   }
 }
