--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -79,3 +79,26 @@ fos_user:
     registration:
             confirmation:
                 enabled: false
+
+
+fr3d_ldap:
+   driver:
+      host: %ldap_domain%
+      username: %ldap_username%
+      password: %ldap_password%
+      useSsl:   false
+      accountDomainName: donibane.pasaia.net
+      accountDomainNameShort: pasaia
+      bindRequiresDn: false # Ez du gordetzen DN-a datu basean. SE SUPONE
+   user:
+      baseDn: dc=pasaia, dc=net
+      usernameAttribute: sAMAccountName
+      attributes:
+         - { ldap_attr: samaccountname,  user_method: setUsername }
+         - { ldap_attr: mail,  user_method: setEmail }
+         - { ldap_attr: department, user_method: setDepartment }
+         - { ldap_attr: employeeid, user_method: setNan }
+         - { ldap_attr: description, user_method: setLanpostua }
+         - { ldap_attr: displayname, user_method: setDisplayname }
+         - { ldap_attr: memberof, user_method: setMembers }
+      filter: (&(ObjectClass=posixAccount))
