--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -10,6 +10,14 @@ parameters:
     # You should uncomment this if you want to use pdo_sqlite
     #database_path: '%kernel.project_dir%/var/data/data.sqlite'
 
+    ldap_domain: example.com
+    ldap_username: user
+    ldap_password: password
+    ldap_base_dn: dc=example, dc=com
+    ldap_server: 192.168.1.1
+
+    cors_allow_origin: 'http://localhost'
+
     mailer_transport: smtp
     mailer_host: 127.0.0.1
     mailer_user: ~
