--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,28 +1,57 @@
 security:
-    encoders:
-        FOS\UserBundle\Model\UserInterface: bcrypt
+  # Preserve plain text password in token for refresh the user.
+  # Analyze the security considerations before turn off this setting.
+  erase_credentials: false
 
-    role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: ROLE_ADMIN
+  firewalls:
+    main:
+      pattern:    ^/
+      fr3d_ldap:  ~
+      form_login:
+          always_use_default_target_path: true
+          default_target_path: /profile
+      logout:     true
+      anonymous:  true
 
-    providers:
-        fos_userbundle:
-            id: fos_user.user_provider.username
+  providers:
+    chain_provider:
+        chain:
+            providers: [fos_userbundle, fr3d_ldapbundle]
 
-    firewalls:
-        main:
-            pattern: ^/
-            form_login:
-                provider: fos_userbundle
-                csrf_token_generator: security.csrf.token_manager
+    fr3d_ldapbundle:
+        id: fr3d_ldap.security.user.provider
 
-            logout:       true
-            anonymous:    true
+    fos_userbundle:
+        id: fos_user.user_provider.username
 
-    access_control:
-        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/, role: ROLE_USER }
-        - { path: ^/admin/, role: ROLE_ADMIN }
+  encoders:
+      AcmeBundle\Acme\User\LdapUser: plaintext
+
+#security:
+#    encoders:
+#        FOS\UserBundle\Model\UserInterface: bcrypt
+#
+#    role_hierarchy:
+#        ROLE_ADMIN:       ROLE_USER
+#        ROLE_SUPER_ADMIN: ROLE_ADMIN
+#
+#    providers:
+#        fos_userbundle:
+#            id: fos_user.user_provider.username
+#
+#    firewalls:
+#        main:
+#            pattern: ^/
+#            form_login:
+#                provider: fos_userbundle
+#                csrf_token_generator: security.csrf.token_manager
+#
+#            logout:       true
+#            anonymous:    true
+#
+#    access_control:
+#        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+#        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+#        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+#        - { path: ^/, role: ROLE_USER }
+#        - { path: ^/admin/, role: ROLE_ADMIN }
