--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -102,3 +102,17 @@ fr3d_ldap:
          - { ldap_attr: displayname, user_method: setDisplayname }
          - { ldap_attr: memberof, user_method: setMembers }
       filter: (&(ObjectClass=posixAccount))
+
+
+mopa_bootstrap:
+    form: ~  # Adds twig form theme  support
+    menu: ~  # enables twig helpers for menu
+
+knp_menu:
+    # use "twig: false" to disable the Twig extension and the TwigRenderer
+    twig:
+        template: KnpMenuBundle::menu.html.twig
+    #  if true, enables the helper for PHP templates
+    templating: false
+    # the renderer to use, list is also available by default
+    default_renderer: twig
