--- a/composer.json
+++ b/composer.json
@@ -28,12 +28,15 @@
         "friendsofsymfony/user-bundle": "~2.0",
         "incenteev/composer-parameter-handler": "^2.0",
         "jms/serializer-bundle": "^2.3",
+        "knplabs/knp-menu-bundle": "^2.2",
+        "mopa/bootstrap-bundle": "^3.2",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.3.*",
+        "twbs/bootstrap": "^3.3",
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
