NAN check errolda

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -27,6 +27,13 @@ security:
   encoders:
       AcmeBundle\Acme\User\LdapUser: plaintext
 
+  access_control:
+      - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+      - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+      - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+      - { path: ^/, role: ROLE_USER }
+      - { path: ^/admin/, role: ROLE_ADMIN }
+
 #security:
 #    encoders:
 #        FOS\UserBundle\Model\UserInterface: bcrypt
