--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -9,7 +9,7 @@ security:
       fr3d_ldap:  ~
       form_login:
           always_use_default_target_path: true
-          default_target_path: /profile
+          default_target_path: /
       logout:     true
       anonymous:  true
 
@@ -33,32 +33,3 @@ security:
       - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
       - { path: ^/, role: ROLE_USER }
       - { path: ^/admin/, role: ROLE_ADMIN }
-
-#security:
-#    encoders:
-#        FOS\UserBundle\Model\UserInterface: bcrypt
-#
-#    role_hierarchy:
-#        ROLE_ADMIN:       ROLE_USER
-#        ROLE_SUPER_ADMIN: ROLE_ADMIN
-#
-#    providers:
-#        fos_userbundle:
-#            id: fos_user.user_provider.username
-#
-#    firewalls:
-#        main:
-#            pattern: ^/
-#            form_login:
-#                provider: fos_userbundle
-#                csrf_token_generator: security.csrf.token_manager
-#
-#            logout:       true
-#            anonymous:    true
-#
-#    access_control:
-#        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-#        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
-#        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-#        - { path: ^/, role: ROLE_USER }
-#        - { path: ^/admin/, role: ROLE_ADMIN }
