LDAP hidratazioa LDAP Rol bidez eman FOSUser-Rolak

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -112,6 +112,8 @@ fr3d_ldap:
          - { ldap_attr: displayname, user_method: setDisplayname }
          - { ldap_attr: memberof, user_method: setMembers }
       filter: (&(ObjectClass=posixAccount))
+   service:
+      user_hydrator: app.ldap.user_hydrator
 
 
 mopa_bootstrap:
