--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,7 +1,7 @@
 # Learn more about services, parameters and containers at
 # https://symfony.com/doc/current/service_container.html
 parameters:
-    #parameter_name: value
+    fr3d_ldap.security.authentication.provider.class: AppBundle\Security\Authentication\LdapAuthenticationProvider
 
 services:
     # default configuration for services in *this* file
@@ -29,7 +29,17 @@ services:
         public: true
         tags: ['controller.service_arguments']
 
-    # add more services, or override services that need manual wiring
-    # AppBundle\Service\ExampleService:
-    #     arguments:
-    #         $someArgument: 'some_value'
+
+
+    fr3d_ldap.security.authentication.provider:
+      class: "%fr3d_ldap.security.authentication.provider.class%"
+      arguments:
+          - '@security.user_checker'
+          - ''
+          - ''
+          - '@fr3d_ldap.ldap_manager'
+          - '@fos_user.user_manager'
+          - "%security.authentication.hide_user_not_found%"
+          - "@doctrine.orm.entity_manager"
+    app.ldap.user_hydrator:
+      class: AppBundle\Ldap\UserHydrator
