Tramites save ok. Redirecto to Tab

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -39,6 +39,8 @@ twig:
     strict_variables: '%kernel.debug%'
     form_theme:
         - 'bootstrap_3_horizontal_layout.html.twig'
+    globals:
+        horkonpon: '%horkonpon%'
 
 # Doctrine Configuration
 doctrine:
