--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -25,3 +25,6 @@ parameters:
 
     # A secret key that's used to generate certain security-related tokens
     secret: ThisTokenIsNotSoSecretChangeIt
+
+    # horkonpon API key
+    horkonpon: API_key
