--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -9,7 +9,7 @@ security:
       fr3d_ldap:  ~
       form_login:
           always_use_default_target_path: true
-          default_target_path: /
+          default_target_path: /barrutia
       logout:     true
       anonymous:  true
 
