--- a/composer.json
+++ b/composer.json
@@ -31,13 +31,14 @@
         "jms/serializer-bundle": "^2.3",
         "knplabs/knp-menu-bundle": "^2.2",
         "mopa/bootstrap-bundle": "^3.2",
+        "ob/highcharts-bundle": "dev-master",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
-        "symfony/symfony": "3.3.*",
+        "symfony/symfony": "3.4.*",
         "twbs/bootstrap": "^3.3",
         "twig/twig": "^1.0||^2.0"
     },
