Bi hizkuntzetan jarri aplikazioa

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,6 +1,15 @@
+barrutia:
+    path: /barrutia
+    defaults: { _controller: AppBundle:Default:barrutia }
+
 app:
     resource: '@AppBundle/Controller/'
+    prefix: /{_locale}
     type: annotation
+    requirements:
+        _locale: "|es|eu"
+    defaults:
+        _locale: 'eu'
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
