--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     },
     "require": {
         "php": ">=5.5.9",
+        "avanzu/admin-theme-bundle": "^1.3",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-migrations-bundle": "^1.0",
         "doctrine/orm": "^2.5",
@@ -31,7 +32,6 @@
         "jms/serializer-bundle": "^2.3",
         "knplabs/knp-menu-bundle": "^2.2",
         "mopa/bootstrap-bundle": "^3.2",
-        "ob/highcharts-bundle": "dev-master",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "stof/doctrine-extensions-bundle": "^1.3",
