--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "babel-preset-es2015": "^6.24.1",
     "bootstrap": "3",
     "bootstrap-datepicker": "^1.7.1",
+    "chart.js": "^2.7.2",
     "del": "^3.0.0",
     "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
