--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -64,6 +64,24 @@ doctrine:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+        dql:
+            numeric_functions:
+                round: DoctrineExtensions\Query\Mysql\Round
+            string_functions:
+                field: DoctrineExtensions\Query\Mysql\Field
+                collate: DoctrineExtensions\Query\Mysql\Collate
+                match: DoctrineExtensions\Query\Mysql\MatchAgainst
+                soundex: DoctrineExtensions\Query\Mysql\Soundex
+            datetime_functions:
+                date: DoctrineExtensions\Query\Mysql\Date
+                datediff: DoctrineExtensions\Query\Mysql\DateDiff
+                datesub: DoctrineExtensions\Query\Mysql\DateSub
+                year: DoctrineExtensions\Query\Mysql\Year
+                month: DoctrineExtensions\Query\Mysql\Month
+                day: DoctrineExtensions\Query\Mysql\Day
+                now: DoctrineExtensions\Query\Mysql\Now
+                time: DoctrineExtensions\Query\Mysql\Time
+                timediff: DoctrineExtensions\Query\Mysql\TimeDiff
 
 doctrine_migrations:
     dir_name: "%kernel.root_dir%/DoctrineMigrations"
