--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "require": {
         "php": ">=5.5.9",
         "avanzu/admin-theme-bundle": "dev-master",
+        "beberlei/DoctrineExtensions": "^1.0",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-migrations-bundle": "^1.0",
         "doctrine/orm": "^2.5",
@@ -32,6 +33,7 @@
         "jms/serializer-bundle": "^2.3",
         "knplabs/knp-menu-bundle": "^2.2",
         "mopa/bootstrap-bundle": "^3.2",
+        "oro/doctrine-extensions": "^1.2",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "sg/datatablesbundle": "^1.0",
