--- a/.editorconfig
+++ b/.editorconfig
@@ -6,15 +6,22 @@
 # EditorConfig files are easily readable and they work nicely with version
 # control systems.
 
+
 root = true
 
+; Unix-style newlines
 [*]
-indent_style = space
-indent_size = 2
-end_of_line = lf
 charset = utf-8
-trim_trailing_whitespace = true
+end_of_line = LF
 insert_final_newline = true
+trim_trailing_whitespace = true
+
+[*.{php,html,twig}]
+indent_style = space
+indent_size = 4
 
 [*.md]
-trim_trailing_whitespace = false
+max_line_length = 80
+
+[COMMIT_EDITMSG]
+max_line_length = 0
