--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -25,8 +25,9 @@ security:
         id: fos_user.user_provider.username
 
   encoders:
-      AcmeBundle\Acme\User\LdapUser: plaintext
-
+      AppBundle\Entity\User: plaintext
+#      AcmeBundle\Acme\User\LdapUser: plaintext
+#       FOS\UserBundle\Model\UserInterface: bcrypt
   access_control:
       - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
       - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
